--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.8.5",
+    "apollo-server-core": "^3.12.1",
+    "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.0.0",
-    "express": "^4.17.1",
-    "graphql": "^15.5.0",
+    "express": "^4.18.2",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2"
   },
