--- a/client/package.json
+++ b/client/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "@apollo/client": "^3.8.5",
-    "@apollo/server": "^4.9.4",
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^5.2.3",
-    "graphql": "^16.8.1",
+    "apollo-boost": "^0.4.9",
+    "bootstrap": "^4.4.1",
+    "graphql": "^15.7.2",
+    "graphql-tag": "^2.12.6",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^2.7.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,9 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "main": "index.js",
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
